# sub-wiki-js.hq-agent-plugin-marketplace

./: .gitignore  README.md
.claude-plugin/: marketplace.json
plugins/wiki-sync/: package.json
plugins/wiki-sync/.claude-plugin/: plugin.json
plugins/wiki-sync/skills/wiki-sync/: SKILL.md
plugins/wiki-sync/src/: get-jwt.js  pyproject.toml  sync-nav.js  sync-pages.js  upload.js
plugins/wiki-sync/src/wiki_sync/: __init__.py  cli.py  sync_assets.py  sync_nav.py  sync_pages.py  wiki_api.py
